feat: integrate Google Drive API and enhance User model with new fields and validation

--- a/EcommerceMultiVendorNossoCloset/sourceCode/backend-spring/src/main/resources/application-dev.properties
+++ b/EcommerceMultiVendorNossoCloset/sourceCode/backend-spring/src/main/resources/application-dev.properties
@@ -33,3 +33,11 @@ logging.level.com.zosh=DEBUG
 # Development specific settings - Disabled DevTools to fix File Watcher error
 spring.devtools.livereload.enabled=false
 spring.devtools.restart.enabled=false
+
+AWS_ACCESS_KEY_ID=your_key
+AWS_SECRET_ACCESS_KEY=your_secret
+AWS_S3_BUCKET_NAME=nosso-closet-images
+
+GOOGLE_DRIVE_ENABLED=true
+GOOGLE_DRIVE_FOLDER_ID=your_folder_id
+# + arquivo credentials.json
