--- a/EcommerceMultiVendorNossoCloset/sourceCode/backend-spring/src/main/resources/application-docker.properties
+++ b/EcommerceMultiVendorNossoCloset/sourceCode/backend-spring/src/main/resources/application-docker.properties
@@ -78,3 +78,15 @@ spring.task.execution.pool.core-size=5
 spring.task.execution.pool.max-size=10
 spring.task.execution.pool.queue-capacity=25
 spring.task.execution.thread-name-prefix=async-
+
+# ===== GOOGLE DRIVE CONFIGURATION =====
+google.drive.enabled=${GOOGLE_DRIVE_ENABLED:true}
+google.drive.credentials.file.path=${GOOGLE_DRIVE_CREDENTIALS_FILE:credentials.json}
+google.drive.application.name=${GOOGLE_DRIVE_APP_NAME:Nosso Closet - Sistema de Catalogos}
+google.drive.folder.id=${GOOGLE_DRIVE_FOLDER_ID:}
+
+# ===== UPLOAD CONFIGURATION =====
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.file-size-threshold=2KB
